Using standard charset.